# jkcenum

./: .bumpversion.cfg  Cargo.toml  LICENSE  README.md
derive/: Cargo.toml
derive/src/: attribute.rs  derive_enum.rs  iter.rs  lib.rs
src/: errors.rs  lib.rs
tests/: test_fromint.rs  test_fromstr.rs  test_serde.rs  test_tostring.rs  test_vec.rs
